<resources>
    <string name="app_name">MuseosJorgePrieto</string>
    <string name="created1">Created By</string>
    <string name="created2">Jorge Prieto</string>
    <string name="descriptionLogo">logo of the musseum app</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="rgTextForImage">Add a photo by pressing on the image</string>
    <string name="alertTextForRegister">Error, operation failed</string>
    <string name="alertTextForLogin">Error, wrong email or password</string>
    <string name="loginGoogle">Login with google</string>
    <string name="prefs_file">com.jorgeprieto.museosjorgeprieto.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_navigation_drawer_museo">NavigationDrawerMuseoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textToChangeImage">Press to change current image</string>
    <string name="textCantChangeImage">Using google you can´t change the image</string>
    <string name="menu_user">User</string>
    <string name="menu_gallery">List Of Museums</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_tickets">Check Tickets</string>
    <string name="logout">Log out</string>
    <string name="change">Change credentials</string>
    <string name="map">Map of Museums</string>
    <string name="tickets">Buy tickets</string>
    <string name="add_photo">Add photo</string>
    <string name="scanner">Scan The Ticket</string>
    <string name="qrCode">This is your QR Code</string>
    <string name="scanCode">Press to scan the code</string>
    <string name="goBack">Back</string>
</resources>