<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/MusseumList"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery"/>
        <item
                android:id="@+id/Map"
                android:icon="@drawable/ic_baseline_map_24"
                android:title="@string/map"/>
        
        <item
                android:id="@+id/checkTickets"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/check_tickets"/>

        <item
                android:id="@+id/User"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_user"/>


    </group>
</menu>