<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_gallery">

    <fragment
            android:id="@+id/User"
            android:name="com.jorgeprieto.ui.User.UserFragment"
            android:label="@string/menu_user"
            tools:layout="@layout/fragment_user"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.jorgeprieto.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.jorgeprieto.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>

    <fragment android:id="@+id/checkTickets"
              android:name="com.jorgeprieto.ui.CheckTickets.CheckTicketsFragment"
              android:label="fragment_check_tickets"
              tools:layout="@layout/fragment_check_tickets"/>
</navigation>