<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.jorgeprieto.ui.PantallaSplash"
        android:id="@+id/motionLayout"
        app:layoutDescription="@xml/activity_pantalla_splash_scene"
>

    <ImageView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/imgSplash"
            tools:srcCompat="@drawable/museoscuadrado"
            app:srcCompat="@drawable/museoscuadrado" android:contentDescription="@string/descriptionLogo"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCreador1"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/blue"
            android:text="@string/created1"
            android:fontFamily="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imgSplash"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCreador2"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/blue"
            android:text="@string/created2"
            android:fontFamily="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCreador1"/>


</androidx.constraintlayout.motion.widget.MotionLayout>